made popup better

--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,9 @@
     <ul>
   <li>Student ID Hider</li>
   <li>Dark Mode</li>
-  <li>Pattern Changer</li>
+
 </ul>
+        <h2>To disable, remove the exstention.</h2>
     <script src="popup.js"></script>
   </body>
 </html>
