--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,17 @@
     <button id="source">Source Code Github</button>
         <h3>Currently Using</h3>
     <ul>
-  <li>Student ID Hider</li>
+        <li>Student ID Hider</li>
+              <ul>
+          <li>Keep away prying eyes that can steal your lunch money and check out books in your name, costing you</li>
+        </ul>
+
   <li>Dark Mode</li>
+              <ul>
+          <li>Better for sleep due to significantly more secretion of melatonin</li>
+<li>Decreases eye strain, neck and shoulder pain, dry eyes, headaches, and blurred vision</li>
+<li>Massively increases battery life</li>
+        </ul>
 
 </ul>
         <h2>To disable, remove the exstention.</h2>
