--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
         </ul>
 
 </ul>
-        <h2>To disable, remove the exstention.</h2>
+        <h2>To disable, remove the extension.</h2>
     <script src="popup.js"></script>
   </body>
 </html>
