--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="popup.css">
 <html>
 <h1>
-    Synergy Addons
+   <img src="images/icon64.png" /> Synergy Addons
     </h1>
     
     <body>
