--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     </h1>
     
     <body>
-    <button id="source">Source Code Github</button>
+<a id="button-1" class="button" href="#">Source Code<img id="arrow-hover" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-paper-plane-1-120.png?raw=true"/></a>
         <h3>Currently Using</h3>
     <ul>
         <li>Student ID Hider</li>
