--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="popup.css">
 <html>
 <br><h1>
-   <img src="images/icon32.png" /> Synergy Addons
+   <img src="images/transparent.png" /> Synergy Addons
     </h1>
     
     <body>
