--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,15 @@
         </ul>
 
 </ul>
-        <h2>To disable, remove the extension.</h2>
+        <div class="toggle-radio">
+  <input type="radio" name="rdo" id="no" >
+  <input type="radio" name="rdo" id="yes" checked>
+  <div class="switch">
+    <label for="no">Disabled</label>
+    <label for="yes">Enabled</label>
+    <span></span>
+  </div>
+</div>
     <script src="popup.js"></script>
   </body>
 </html>
