--- a/popup.html
+++ b/popup.html
@@ -26,8 +26,8 @@
   <input type="radio" name="rdo" id="no" >
   <input type="radio" name="rdo" id="yes" checked>
   <div class="switch">
-    <label for="no">Disable</label>
-    <label for="yes">Enable</label>
+    <label for="no" id="no-e">Disable</label>
+    <label for="yes" id="e">Enable</label>
     <span></span>
   </div>
 </div>
