--- a/popup.html
+++ b/popup.html
@@ -24,7 +24,7 @@
 </ul>
         <div class="toggle-radio">
   <input type="radio" name="rdo" id="no" >
-  <input type="radio" name="rdo" id="yes" checked>
+  <input type="radio" name="rdo" id="yes" >
   <div class="switch">
     <label for="no" id="no-e">Disable</label>
     <label for="yes" id="e">Enable</label>
