--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,10 @@
         </ul>
 
 </ul>
-
-</div>
+  <label class="switch" for="checkbox">
+    <input type="checkbox" id="checkbox" />
+    <div class="slider round"></div>
+  </label>
     <script src="popup.js"></script>
   </body>
 </html>
