--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
 
 </ul>
   <label class="switch" for="checkbox">
-    <input type="checkbox" id="checkbox" onchange="setEnabled()" checked />
+    <input type="checkbox" id="checkbox" onchange="setEnabled()" />
     <div class="slider round"></div>
   </label>
     <script src="popup.js"></script>
