--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="popup.css">
 <html>
+<body>
 <br><h1>
-   <img src="images/transparent.png" /> Synergy Addons
+   <img src="images/icon32.png" /> Synergy Addons
     </h1>
-    
-    <body>
-<a id="button-1" class="button" href="https://github.com/gubareve/synergy-addons">Source Code<img id="arrow-hover" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-paper-plane-1-120.png?raw=true"/></a>
+<a id="button-1" class="button source" href="https://github.com/gubareve/synergy-addons">Source Code<img id="arrow-hover" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-paper-plane-1-120.png?raw=true"/></a>
         <h3>Currently Using</h3>
     <ul>
         <li>Student ID Hider</li>
@@ -23,7 +22,7 @@
 
 </ul>
   <label class="switch" for="checkbox">
-    <input type="checkbox" id="checkbox" onchange="setEnabled()" />
+    <input type="checkbox" id="checkbox" />
     <div class="slider round"></div>
   </label>
     <script src="popup.js"></script>
