--- a/welcome.html
+++ b/welcome.html
@@ -1,1 +1,70 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+      Thank You!
+    </title>
+    <style type="text/css">
+      @import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap');
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #82DCC7;
+        animation: bganimate 30s infinite;
+        overflow: hidden;
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+      }
+      .card {
+        width: 500px;
+        height: 70vh;
+        max-height: 250px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 10px;
+        align-items: center;
+        margin-top: 200px;
+        box-shadow: 3px 3px 30px;
+        transform: translateY(-100vh);
+        animation: in 1s ease-in-out;
+        animation-fill-mode: forwards;
+      }
+      @keyframes in {
+        0% {transform: translateY(-100vh);}
+        100% {transform: translateY(0vh);}
+      }
+      @keyframes bganimate {
+        0% {background-color: #82DCC7;}
+        50% {background-color: #FFC51C;}
+        100% {background-color: #82DCC7;}
+      }
+      .msg {
+        font-size: 30px;
+        text-align: center;
+        margin-top: 20px;
+      }
+      button {
+        background-color: transparent;
+        border-radius: 5px;
+        border-color: black;
+        width: 100px;
+        font-size: 20px;
+        transition-duration: 0.5s;
+      }
+      button:hover {
+        width: 150px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="card">
+      <span class="msg">
+        Thank you for installing synergy addons!
+      </span>
+      <br />
+      <a href='https://wa-bsd405-psv.edupoint.com'><button>OK!</button></a>
+    </div>
+  </body>
+</html>
+
