--- a/welcome.html
+++ b/welcome.html
@@ -60,7 +60,7 @@
   <body>
     <div class="card">
       <span class="msg">
-        Thank you for installing synergy addons!
+        Thanks for installing Synergy Addons!
       </span>
       <br />
       <a href='https://wa-bsd405-psv.edupoint.com'><button>OK!</button></a>
