--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 <br><h1>
-   <img src="images/icon32.png" /> Synergy Addons
+   <img src="images/logo/32x32icon.png" /> Synergy Addons
     </h1>
 <a id="button-1" class="button source" href="https://github.com/gubareve/synergy-addons">Source Code<img id="arrow-hover" src="https://github.com/atloomer/atloomer.github.io/blob/master/img/iconmonstr-paper-plane-1-120.png?raw=true"/></a>
         <h3>Currently Using</h3>
