--- a/popup.html
+++ b/popup.html
@@ -21,11 +21,16 @@
         </ul>
 
 </ul>
-  <label class="switch" for="checkbox">
-    <input type="checkbox" id="checkbox" />
+<p>Toggle Dark Mode: </p>
+  <label class="switch" for="checkbox-dark">
+    <input type="checkbox" id="checkbox-dark" />
+    <div class="slider round"></div>
+  </label>
+  <p>Toggle ID Hider: </p>
+  <label class="switch" for="checkbox-id">
+    <input type="checkbox" id="checkbox-id" />
     <div class="slider round"></div>
   </label>
     <script src="popup.js"></script>
   </body>
 </html>
-
