Worked on making them the same line

--- a/popup.html
+++ b/popup.html
@@ -21,12 +21,11 @@
         </ul>
 
 </ul>
-<p>Toggle Dark Mode: </p>
+   <p>Dark Mode: </p><p> Id Hider: </p>
   <label class="switch" for="checkbox-dark">
     <input type="checkbox" id="checkbox-dark" />
     <div class="slider round"></div>
   </label>
-  <p>Toggle ID Hider: </p>
   <label class="switch" for="checkbox-id">
     <input type="checkbox" id="checkbox-id" />
     <div class="slider round"></div>
