--- a/popup.html
+++ b/popup.html
@@ -21,11 +21,12 @@
         </ul>
 
 </ul>
-   <p>Dark Mode: </p><p> Id Hider: </p>
+   <p>Dark Mode: </p>
   <label class="switch" for="checkbox-dark">
     <input type="checkbox" id="checkbox-dark" />
     <div class="slider round"></div>
   </label>
+   <p> Id Hider: </p>
   <label class="switch" for="checkbox-id">
     <input type="checkbox" id="checkbox-id" />
     <div class="slider round"></div>
